Refactor: HierarchyGraph, and some smaller changes all over
All recursive functions removed from hierarchy graph, replaced with while loops.

--- a/.gitignore
+++ b/.gitignore
@@ -62,3 +62,10 @@ local.properties
 buildSrcTmp/
 distTmp/
 outTmp/
+pickled_validation
+pickled_test
+dataset/*
+results.csv
+main.py
+evaluate.py
+__pycache__/*
